<resources>
    <string name="app_name">MyPong-client</string>
    <string name="btn_login_text">Login</string>
    <string name="btn_register_text">Register</string>
    <string name="edt_username_hint">Username</string>
    <string name="edt_password_hint">Password</string>
    <string name="btn_close_session_txt">Close session</string>
    <string name="btn_invite_user_list">Invite</string>
    <string name="txv_online_users_txt">Online users</string>
    <string name="btn_accept_invitation_txt">Accept</string>
    <string name="btn_reject_invitation_txt">Reject</string>
    <string name="btn_reconnect_txt">Reconnect</string>
    <string name="title_activity_game">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="btn_play_txt">Play with somebody</string>
    <string name="btn_leave_match_text">Leave match</string>
</resources>